Closed Bug 814555 Opened 13 years ago Closed 13 years ago

[BLUETOOTH] After hanging up the phone, still ring tone from bluetooth

Categories

(Firefox OS Graveyard :: General, defect, P2)

defect

Tracking

(blocking-basecamp:+, firefox19 fixed, firefox20 fixed, b2g18 fixed)

VERIFIED FIXED
B2G C2 (20nov-10dec)
blocking-basecamp +
Tracking Status
firefox19 --- fixed
firefox20 --- fixed
b2g18 --- fixed

People

(Reporter: wachen, Assigned: gyeh)

Details

Attachments

(3 files, 1 obsolete file)

*Environment: Phone - Unagi https://releases.mozilla.com/b2g/ 2012-11-22 build *How to reproduce: 1. Go settings > bluetooth 2. Pair a bluetooth 3. Call from another phone 4. Reject the phone call by using the phone (not the bluetooth device) *Expected Result: The phone hung up and no ring tone in bluetooth ear set *Actual Result: Ring tone still remains in bluetooth device
Component: General → Gaia::Bluetooth File Transfer
Assignee: nobody → gyeh
This may depends on the configuration of SIM card. Some SIM cards disconnect the call after rejecting and call status change into DISCONNECTED. Other SIM cards will change its call status into BUSY before DISCONNECTED. Please see attachments for details.
Attached file RIL log for SIM card A
Attached file RIL log for SIM card B
Attachment #684635 - Flags: review?(echou)
Attachment #684635 - Flags: review?(echou) → review+
Attachment #684635 - Attachment is obsolete: true
blocking-basecamp: --- → ?
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
blocking-basecamp: ? → +
Priority: -- → P2
QA Contact: wachen
I think either it is not in v18 yet or not fixed. I can't verify that this is fixed. https://releases.mozilla.com/b2g/ 2012-12-16 build
This patch shall be pushed to both b2g18 and aurora.
Component: Gaia::Bluetooth File Transfer → General
QA Contact: wachen
Needed for aurora, beta, b2g18 plz
Flags: needinfo?(tchung)
QA Contact: wachen
Flags: needinfo?(tchung)
Keywords: checkin-needed
Device: Unagi Build Identifier: 20130113070202 Update channel: nightly b2g18 (pvt server) unagi.zip 13-Jan-2013 08:06 100M https://pvtbuilds.mozilla.org/pub/mozilla.org/b2g/nightly/mozilla-b2g18-unagi-eng/ Git commit info: 2013-11-13 15:15:51 Verified fixed
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: