Bug 814555 - After hanging up the phone, still ring tone from bluetooth. r=echou, a=blocking-basecamp