dom/bluetooth/BluetoothHfpManager.cpp
@@ -985,6 +985,7 @@ BluetoothHfpManager::SetupCIND(int aCallIndex, int aCallState,
       if (!aInitial) {
         switch (currentCallState) {
           case nsIRadioInterfaceLayer::CALL_STATE_INCOMING:
+          case nsIRadioInterfaceLayer::CALL_STATE_BUSY:
             // Incoming call, no break
             sStopSendingRingFlag = true;
           case nsIRadioInterfaceLayer::CALL_STATE_DIALING:
@@ -1143,6 +1144,7 @@ BluetoothHfpManager::OnDisconnect()
     NS_WARNING("BluetoothHfpManager got unexpected socket status!");
   }
 
+  sStopSendingRingFlag = true;
   sCINDItems[CINDType::CALL].value = CallState::NO_CALL;
   sCINDItems[CINDType::CALLSETUP].value = CallSetupState::NO_CALLSETUP;
   sCINDItems[CINDType::CALLHELD].value = CallHeldState::NO_CALLHELD;
